Add application file

--- a/ovlo_template.html
+++ b/ovlo_template.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <title>Ovlo Export</title>
   <style>
+    @page {
+      margin: 0;
+    }
     :root {
       --pink-dark: #D94F70;
       --pink: #F8ADD5;
