--- a/ovlo_template.html
+++ b/ovlo_template.html
@@ -15,14 +15,11 @@
       --text-dark: #333;
       --text-muted: #777;
     }
-    body {
-    font-family: "Noto Color Emoji", "Segoe UI Emoji", "Apple Color Emoji", sans-serif;
-  }
 
     body {
       margin: 0;
       padding: 40px;
-      font-family: "Noto Color Emoji", "Segoe UI Emoji", "Apple Color Emoji", 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background-color: var(--gray-light);
       color: var(--text-dark);
     }
